# HOG_TSC

./: CMakeLists.txt  PrincipalHOG.cpp  README.md  caracteristicasHOG.cpp  caracteristicasHOG.h  direccion.h  guardarArchivo.cpp  guardarArchivo.h  hog.cpp  hog.h  leerCarpeta.cpp  leerCarpeta.h  varios.cpp  varios.h
